samples/_failures_safe/1761641523_b9a963_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_591ca16f.c: In function ‘main’:
./samples/SAFE/__tmp_591ca16f.c:169:5: error: expected declaration or statement at end of input
  169 |     printf("Commands: r=read, p=process, w=write, i=idle, e=error, q=quit\n");
      |     ^~~~~~
